k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: fma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: frontend
          image: 016170083143.dkr.ecr.us-east-1.amazonaws.com/fma-frontend:build-13
          imagePullPolicy: Always
          ports:
            - containerPort: 80
