k8s/fma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fma-ingress
  namespace: fma
spec:
  ingressClassName: nginx
  rules:
    - host: fma.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

    - host: api.fma.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
